--- a/src/output.css
+++ b/src/output.css
@@ -570,46 +570,94 @@ html {
   --tw-contain-style:  ;
 }
 
+.relative {
+  position: relative;
+}
+
 .mr-3 {
   margin-right: 0.75rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
 }
 
 .flex {
   display: flex;
 }
 
-.items-end {
-  align-items: flex-end;
+.h-10 {
+  height: 2.5rem;
 }
 
 .items-center {
   align-items: center;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
 }
 
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
+.gap-4 {
+  gap: 1rem;
 }
 
 .rounded-md {
   border-radius: 0.375rem;
 }
 
-.bg-primary-red {
-  --tw-bg-opacity: 1;
-  background-color: hsl(1 90% 64% / var(--tw-bg-opacity));
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .bg-primary-blue {
   --tw-bg-opacity: 1;
   background-color: hsl(219 85% 26% / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-secundary-lgblue3 {
+  --tw-bg-opacity: 1;
+  background-color: hsl(205 33% 90% / var(--tw-bg-opacity));
+}
+
+.bg-secundary-lgblue2 {
+  --tw-bg-opacity: 1;
+  background-color: hsl(211 68% 94% / var(--tw-bg-opacity));
+}
+
+.bg-secundary-lgblue1 {
+  --tw-bg-opacity: 1;
+  background-color: hsl(210 60% 98% / var(--tw-bg-opacity));
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
+.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
 }
 
 .px-4 {
@@ -622,19 +670,9 @@ html {
   padding-bottom: 1.5rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-}
-
-.px-2\.5 {
-  padding-left: 0.625rem;
-  padding-right: 0.625rem;
 }
 
 .pb-4 {
@@ -651,30 +689,20 @@ html {
   line-height: 2rem;
 }
 
-.font-bold {
-  font-weight: 700;
-}
-
-.font-semibold {
-  font-weight: 600;
+.font-\[500\] {
+  font-weight: 500;
 }
 
 .font-\[800\] {
   font-weight: 800;
 }
 
-.font-\[500\] {
-  font-weight: 500;
+.leading-3 {
+  line-height: .75rem;
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-secundary-gblue {
-  --tw-text-opacity: 1;
-  color: hsl(219 14% 63% / var(--tw-text-opacity));
+.leading-5 {
+  line-height: 1.25rem;
 }
 
 .text-secundary-dgblue {
@@ -682,11 +710,117 @@ html {
   color: hsl(219 12% 42% / var(--tw-text-opacity));
 }
 
-.text-secundary-vdblue {
+.text-secundary-gblue {
   --tw-text-opacity: 1;
-  color: hsl(224 21% 14% / var(--tw-text-opacity));
+  color: hsl(219 14% 63% / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 /* Custom styles */
 
 /* Fonts */
+
+.after\:absolute::after {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.after\:top-0::after {
+  content: var(--tw-content);
+  top: 0px;
+}
+
+.after\:top-\[50\%\]::after {
+  content: var(--tw-content);
+  top: 50%;
+}
+
+.after\:top-\[20\%\]::after {
+  content: var(--tw-content);
+  top: 20%;
+}
+
+.after\:top-\[25\%\]::after {
+  content: var(--tw-content);
+  top: 25%;
+}
+
+.after\:top-\[30\%\]::after {
+  content: var(--tw-content);
+  top: 30%;
+}
+
+.after\:size-8::after {
+  content: var(--tw-content);
+  width: 2rem;
+  height: 2rem;
+}
+
+.after\:size-4::after {
+  content: var(--tw-content);
+  width: 1rem;
+  height: 1rem;
+}
+
+.after\:size-3::after {
+  content: var(--tw-content);
+  width: 0.75rem;
+  height: 0.75rem;
+}
+
+.after\:size-2::after {
+  content: var(--tw-content);
+  width: 0.5rem;
+  height: 0.5rem;
+}
+
+.after\:h-2::after {
+  content: var(--tw-content);
+  height: 0.5rem;
+}
+
+.after\:w-2::after {
+  content: var(--tw-content);
+  width: 0.5rem;
+}
+
+.after\:rounded-\[50\%\]::after {
+  content: var(--tw-content);
+  border-radius: 50%;
+}
+
+.after\:bg-red-600::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.after\:bg-primary-red::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: hsl(1 90% 64% / var(--tw-bg-opacity));
+}
+
+.after\:content-\[\'\1F354\'\]::after {
+  --tw-content: '🍔';
+  content: var(--tw-content);
+}
+
+.after\:content-\[\'\'\]::after {
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
+.after\:content-\[\'Hola\'\]::after {
+  --tw-content: 'Hola';
+  content: var(--tw-content);
+}
