--- a/src/output.css
+++ b/src/output.css
@@ -608,6 +608,10 @@ html {
   position: relative;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .mb-3 {
   margin-bottom: 0.75rem;
 }
@@ -628,24 +632,12 @@ html {
   margin-top: 1rem;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
 .flex {
   display: flex;
 }
 
 .h-10 {
   height: 2.5rem;
-}
-
-.w-screen {
-  width: 100vw;
 }
 
 .cursor-pointer {
@@ -660,20 +652,12 @@ html {
   justify-content: flex-start;
 }
 
-.justify-center {
-  justify-content: center;
-}
-
 .justify-between {
   justify-content: space-between;
 }
 
 .gap-4 {
   gap: 1rem;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
 }
 
 .rounded-md {
@@ -691,26 +675,6 @@ html {
 .bg-primary-blue {
   --tw-bg-opacity: 1;
   background-color: hsl(219 85% 26% / var(--tw-bg-opacity));
-}
-
-.bg-secundary-lgblue1 {
-  --tw-bg-opacity: 1;
-  background-color: hsl(210 60% 98% / var(--tw-bg-opacity));
-}
-
-.bg-secundary-lgblue2 {
-  --tw-bg-opacity: 1;
-  background-color: hsl(211 68% 94% / var(--tw-bg-opacity));
-}
-
-.bg-secundary-lgblue3 {
-  --tw-bg-opacity: 1;
-  background-color: hsl(205 33% 90% / var(--tw-bg-opacity));
-}
-
-.bg-secundary-gblue {
-  --tw-bg-opacity: 1;
-  background-color: hsl(219 14% 63% / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -795,6 +759,31 @@ html {
 
 /* Fonts */
 
+/* Notifications */
+
+.notification-active {
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: hsl(210 60% 98% / var(--tw-bg-opacity));
+}
+
+.not-read {
+  position: relative;
+  margin-left: 0.5rem;
+}
+
+.not-read::after {
+  position: absolute;
+  top: 40%;
+  height: 0.5rem;
+  width: 0.5rem;
+  border-radius: 50%;
+  --tw-bg-opacity: 1;
+  background-color: hsl(1 90% 64% / var(--tw-bg-opacity));
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
 .after\:absolute::after {
   content: var(--tw-content);
   position: absolute;
@@ -831,18 +820,6 @@ html {
   content: var(--tw-content);
 }
 
-.hover\:scale-50:hover {
-  --tw-scale-x: .5;
-  --tw-scale-y: .5;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-125:hover {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
@@ -865,32 +842,12 @@ html {
     margin-bottom: 2.25rem;
   }
 
-  .sm\:mt-10 {
-    margin-top: 2.5rem;
-  }
-
-  .sm\:mt-9 {
-    margin-top: 2.25rem;
-  }
-
   .sm\:flex {
     display: flex;
   }
 
-  .sm\:w-\[665px\] {
-    width: 665px;
-  }
-
   .sm\:w-screen {
     width: 100vw;
-  }
-
-  .sm\:max-w-\[665px\] {
-    max-width: 665px;
-  }
-
-  .sm\:max-w-\[670px\] {
-    max-width: 670px;
   }
 
   .sm\:max-w-\[675px\] {
@@ -901,20 +858,8 @@ html {
     justify-content: center;
   }
 
-  .sm\:rounded-md {
-    border-radius: 0.375rem;
-  }
-
   .sm\:rounded-lg {
     border-radius: 0.5rem;
-  }
-
-  .sm\:border {
-    border-width: 1px;
-  }
-
-  .sm\:border-solid {
-    border-style: solid;
   }
 
   .sm\:bg-secundary-lgblue1 {
@@ -922,53 +867,18 @@ html {
     background-color: hsl(210 60% 98% / var(--tw-bg-opacity));
   }
 
-  .sm\:p-4 {
-    padding: 1rem;
-  }
-
-  .sm\:p-5 {
-    padding: 1.25rem;
-  }
-
-  .sm\:p-6 {
-    padding: 1.5rem;
-  }
-
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
-  }
-
-  .sm\:py-6 {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
   }
 
   .sm\:pt-6 {
     padding-top: 1.5rem;
   }
 
-  .sm\:shadow-sm {
-    --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-    --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
-
   .sm\:shadow-md {
     --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
     --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
-
-  .sm\:shadow {
-    --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-    --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
-
-  .sm\:shadow-lg {
-    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 }
