--- a/src/styles.css
+++ b/src/styles.css
@@ -19,14 +19,15 @@
 		@apply font-sans;
 	}
 }
-npx tailwindcss -o build.css --minify
 
 /* Notifications */
 
-.notification-active {
-	@apply bg-secundary-lgblue1 rounded-lg;
-}
+@layer components {
+	.notification-active {
+		@apply bg-secundary-lgblue1 rounded-lg;
+	}
 
-.not-read {
-	@apply ml-2 relative after:content-[''] after:absolute after:top-[40%] after:h-2 after:w-2 after:bg-primary-red after:rounded-[50%];
+	.not-read {
+		@apply ml-2 relative after:content-[''] after:absolute after:top-[40%] after:h-2 after:w-2 after:bg-primary-red after:rounded-[50%];
+	}
 }
